--- a/public/404.html
+++ b/public/404.html
@@ -379,7 +379,7 @@
     </p>
   </div>
   <div class="buttons-container">
-    <a class="border-button" href="http://www.humanbeans.fu" target="_blank"><span class="fa fa-home"></span> Home Page</a>
+    <a class="border-button" href="http://www.humanbeans.fun" target="_blank"><span class="fa fa-home"></span> Home Page</a>
   </div>
 </div>
 
